# tator

./: .env  .env.backup  .env.swp  .git-blame-ignore-revs  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  DEVELOPER.md  LICENSE.md  Makefile  README.md  compose.yaml  example-env  install.sh  manage.py  nginx-service-test.yaml  package-lock.json  package.json  pylint.ini  pyproject.toml
.circleci/: config.yml  push_aws.sh  push_dockerhub.sh  push_oci.sh
argo/: argo-server.yaml  workflow-controller-configmap.yaml
compose/: gunicorn.cron  nginx.conf  nginx.conf.template  postgis.cron
doc/: CacheStrategy.md  Certificate.md  DEVELOPER.md  REST.md  account.md  admin.md  architecture.rst  aws.md  backups.md  baremetal.md  build.md  certbot.md  conf.py  dashboard.md  deployment.md  developer.md  duckdns.md  example-secrets.yaml  ffmpeg_build.md  front_end_test_procedure.md  https.rst  index.rst  job-cluster.md  kubernetes.md  legacyData.md  logs.md  metadata.md  nfs.md  nodes.md  project.md  registry.md  requirements.txt  start_here.md  swconfig.md  upgradeToNewUX_Checklist.md
k8s/: cluster-pvc.yaml  daphne-service.yaml  example-secrets.yaml  metallb-configmap.yaml  network_fix.yaml  nginx-configmap.yaml  nginx-deployment.yaml  nginx-service.yaml  pgbouncer-deployment.yaml  pgbouncer-service.yaml  postgis-deployment.yaml  postgis-service.yaml  redis-deployment.yaml  redis-service.yaml  tator-deployment.yaml  tator-secrets.yaml  tusd-deployment.yaml  tusd-service.yaml  valid_secrets.sh
main/: admin.py  auth.py  backup.py  cache.py  cognito.py  consumers.py  s3.py  (+18 more)
(+1896 files in other folders)
